--- a/Ensemble_Learning_.ipynb
+++ b/Ensemble_Learning_.ipynb
@@ -28,7 +28,7 @@
         "This is based on the principle that while individual models might make errors or have limitations, their combined predictions—if aggregated cleverly—can cancel out individual weaknesses and produce more accurate, stable, and robust results.\n",
         "\n",
         "\n",
-        "Q2: What is the difference between Bagging and Boosting? **bold text**\n",
+        "Q2: What is the difference between Bagging and Boosting? \n",
         "\n",
         "Ans:\n",
         "Bagging and Boosting are both popular ensemble learning techniques, but they differ in their approach to combining models. Here's a breakdown of their key differences:\n",
